fix: fix navigation alignment on small screens,. feat: update css file sources in html files

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1789,6 +1789,9 @@ input[type="tel"] {
     .about-buttons-big-screen {
         display: inline;
     }
+    .page-header_item .navigation-list li{
+        margin-right:0;
+    }
 }
 
 @media screen and (min-width: 481px) {
@@ -2274,6 +2277,10 @@ img.testimonial-picture-2 {
       right: -100%;
   } */
 
+    .page-header_item .navigation-list li{
+        margin-right:0;
+    }
+
     .page-header_item .navigation-list li a {
         font-size: 26px;
         color: white;
@@ -2495,6 +2502,10 @@ a.prev-case{
         -o-transition: right 0.2s linear;
         transition: right 0.2s linear;
         opacity: 0.9;
+    }
+
+    .page-header_item .navigation-list li{
+        margin-right:0;
     }
 
     .page-header_item .navigation-list li a {
